--- a/task4/index.html
+++ b/task4/index.html
@@ -5,17 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task3</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Task4</title>
+
 </head>
 
 <body>
     <header>
-        <button class="cart-button" type="button">Pressme</button>
+        <h2>Validate form</h2>
     </header>
-    <main>
-        <div class="goods-list"></div>
-        <script src="script.js"></script>
-    </main>
+    <div class="container">
+        <form id="signup" class="form">
+            <div class="form-field">
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name">
+                <small></small>
+            </div>
+
+            <div class="form-field">
+                <label for="Email">Email:</label>
+                <input type="text" name="email" id="email">
+                <small></small>
+            </div>
+
+            <div class="form-field">
+                <label for="phNumber">Phone:</label>
+                <input type="tel" name="phNumber" id="phNumber">
+                <small></small>
+            </div>
+
+            <div class="form-field">
+                <input type="submit" value="Submit">
+            </div>
+        </form>
+    </div>
+    <script src=script.js></script>
 </body>
 
 </html>
