--- a/task4/index.html
+++ b/task4/index.html
@@ -15,27 +15,27 @@
         <h2>Validate form</h2>
     </header>
     <div class="container">
-        <form id="signup" class="form">
+        <form id="form" class="form">
             <div class="form-field">
                 <label for="name">Name:</label>
                 <input type="text" name="name" id="name">
-                <small></small>
+                <error></error>
             </div>
 
             <div class="form-field">
                 <label for="Email">Email:</label>
                 <input type="text" name="email" id="email">
-                <small></small>
+                <error></error>
             </div>
 
             <div class="form-field">
                 <label for="phNumber">Phone:</label>
                 <input type="tel" name="phNumber" id="phNumber">
-                <small></small>
+                <error></error>
             </div>
 
             <div class="form-field">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" class="btn">
             </div>
         </form>
     </div>
